--- a/.github/ISSUE_TEMPLATE/request.yaml
+++ b/.github/ISSUE_TEMPLATE/request.yaml
@@ -66,7 +66,7 @@ body:
       label: Safe to automate
       options:
         - label: "Yes — this can be automated without human intervention (PR will still be gated by CI + vulnerability checks)"
-          required: false
+          required: true
 
   - type: markdown
     attributes:
